--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,35 +1,44 @@
-:root {
-  font-family: 'Inconsolata', monospace;
+/* :root {
+  font-family: 'Inconsolata', monospace; */
 
-  line-height: 1.5;
+  /* line-height: 1.5;
   font-weight: 400;
+  margin: 20px */
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
+  
+/* } */
+
+:root, body {
+  font-family: 'Inconsolata', monospace;
+  max-width: 1280px;
+  min-width: 1000px;
+  margin: 25px
+
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
-body {
+/* body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -66,6 +75,56 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* #app {
+  display: grid;
+  grid-template-rows: 1fr 4fr
+} */
+
+#header-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  width: 100%;
+  height: 100px
+}
+
+#header-details {
+  display: flex;
+  justify-content: space-around
+}
+
+#header-details * {
+  color: black;
+  text-decoration: none
+}
+
+#header-details *:active {
+  font-weight: bold
+}
+
+#createpage-container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  column-gap: 50px
+  
+}
+
+#create-details {
+  border: solid;
+  border: 2px;
+  height: 100%
+}
+
+#newword-form {
+  margin: 10px;
+  margin-left: 0;
+ 
+}
+
+#newword-form * {
+  font-family: 'Inconsolata', monospace;
+
 }
 
 #grid2 {
