--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@
   min-width: 1000px;
   margin: 25px;
   --primary: #f5f5f5;
-  --secondary: #333333;
+  --secondary: #cbcbcb;
 }
 
 /* a {
@@ -53,19 +53,21 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background: var(--primary);
   cursor: pointer;
-  transition: border-color 0.25s;
+  /* transition: border-color 0.25s; */
 }
 button:hover {
   border-color: #646cff;
+  background: var(--secondary)
+
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -76,7 +78,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 /* #home-container h1 {
   text-align: center
@@ -108,10 +110,10 @@ button:focus-visible {
   border: none
 }
 
-.home-form button:hover {
+/* .home-form button:hover {
   background: var(--primary);
   border-color: black
-}
+} */
 
 .home-form * {
   margin: 10px;
@@ -141,13 +143,82 @@ button:focus-visible {
   justify-content: space-around
 }
 
-#header-details * {
+#header-container * {
   color: black;
-  text-decoration: none
+  text-decoration: none;
+  font-size: 18px
 }
 
 #header-details *:active {
   font-weight: bold
+}
+
+#createoptions-container {
+  display: flex;
+  justify-content: center
+}
+
+#createoptionsbutton-container {
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr 1fr;
+ 
+}
+
+.createoptions-mainbutton {
+  width: 300px;
+  min-height: 60px;
+  max-height: 60px;
+  margin: 20px;
+  background: var(--primary);
+
+
+}
+
+.createoptions-mainbutton:hover {
+  /* font-weight: 600; */
+  border-color: black
+}
+
+.createoptions-mainbutton * {
+  text-decoration: none;
+  color: black
+
+}
+
+#existingpuzzles-container {
+  display: grid;
+  grid-column-end: span 2;
+  justify-content: end
+  /* position: absolute;
+  top: 250px;
+  left: 600px */
+  /* width: 150px; */
+}
+
+#existingpuzzle-link {
+  color: black;
+  /* margin: 15px; */
+  padding: 15px;
+  background: white;
+  
+  /* padding-top: 30px; */
+  /* border: solid; */
+}
+
+#existingpuzzle-link:hover {
+  border: none;
+  text-decoration: underline
+}
+
+#existingpuzzle-link:focus-visible {
+  outline: none
+}
+
+
+#existingpuzzle-link * {
+  text-decoration: none;
+  color: black
 }
 
 #createpage-container {
@@ -205,4 +276,10 @@ button:focus-visible {
   border-width: 1px;
   border-top: none;
   border-bottom: none
+}
+
+#deletepuzzle-button:hover {
+  background: #8b0000;
+  color: white;
+  border: none
 }
