--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,3 @@
-/* :root {
-  font-family: 'Inconsolata', monospace; */
-
-  /* line-height: 1.5;
-  font-weight: 400;
-  margin: 20px */
-
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-  
-/* } */
-
 :root, body {
   font-family: 'Inconsolata', monospace;
   /* max-width: 1280px; */
@@ -25,21 +7,7 @@
   --secondary: #cbcbcb;
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
 
-/* body {
-  margin: 0;
-  
-  min-width: 320px;
-  min-height: 100vh;
-} */
 
 h1 {
   font-size: 3.2em;
@@ -67,23 +35,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-/* #home-container h1 {
-  text-align: center
-
-} */
 
 #homeforms-container {
   display: grid;
@@ -108,6 +59,19 @@ button:focus-visible {
 .home-form button {
   padding: 20px;
   border: none
+}
+
+#nouserpopup *, #deletepopup *, #accuracypopup * {
+  color: black;
+  font-family: 'Inconsolata', monospace;
+  text-align: center;
+  padding: 10px
+
+}
+
+#nouserpopup button, #deletepopup button, #accuracypopup button {
+  background: var(--primary);
+  margin: 5px 10px
 }
 
 /* .home-form button:hover {
@@ -135,7 +99,7 @@ button:focus-visible {
   display: grid;
   grid-template-columns: 2fr 1fr;
   width: 100%;
-  height: 100px
+  height: 70px
 }
 
 #header-details {
@@ -223,17 +187,45 @@ button:focus-visible {
 
 #createpage-container {
   display: grid;
+  grid-template-rows: 1fr 5fr;
   grid-template-columns: 1fr 2fr 1fr;
   column-gap: 20px;
   /* justify-items: center */
   
 }
 
+#createpuzzletitle {
+  display: grid;
+  grid-column-end: span 2;
+  height: 150px;
+
+}
+
+#puzzlenameeditmode input {
+  height: 100px;
+  font-size: 50px;
+  font-family: 'Inconsolata', monospace;
+  border-radius: 4px;
+  border: solid;
+  border-width: 1px;
+  padding-left: 10px
+
+}
+
+#puzzlenameeditmode button {
+  margin: 10px;
+}
+
 #create-details {
   border: solid;
   border: 2px;
   height: 100%;
-  margin-left: 15px
+  margin: 15px
+}
+
+#create-details * {
+  margin: 10px
+
 }
 
 #newword-form {
@@ -283,14 +275,16 @@ button:focus-visible {
 #cell-number {
   font-size: 14px;
   display: grid;
-  justify-content: left
+  justify-content: left;
+  height: 10px
 }
 
 #cell-letter {
   display: grid;
   justify-content: center;
   align-items: center;
-  font-size: 20px
+  font-size: 20px;
+  /* height: 15px */
   /* font-weight: 600 */
 }
 
@@ -299,3 +293,5 @@ button:focus-visible {
   color: white;
   border: none
 }
+
+
