--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,7 +287,8 @@ button:focus-visible {
   border-width: 1px;
   border-top: none;
   border-bottom: none;
-  display:grid;
+  border-right: none;
+  display: grid;
   width: 100%;
 }
 
@@ -295,7 +296,8 @@ button:focus-visible {
   font-size: 14px;
   display: grid;
   justify-content: left;
-  height: 10px
+  height: 10px;
+  border: none
 }
 
 #cell-letter {
@@ -303,6 +305,7 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   font-size: 20px;
+  border: none
   /* height: 15px */
   /* font-weight: 600 */
 }
