--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,6 +280,7 @@ button:focus-visible {
 #newword-form, #newguess-form input {
   margin: 10px;
   margin-left: 0;
+  border-radius: 2px
    
 }
 
